[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyall"
version = "1.50.0"
description = "Python module to read Kongsberg .ALL multibeam sonar files"
readme = "README.MD"
license = { file = "LICENSE" }
authors = [
  { name = "Paul Kennedy", email = "paul.kennedy@guardiangeomatics.com" },
  { name = "Julian Valdez" }
]
maintainers = [
  { name = "Julian Valdez" }
]
requires-python = ">=3.8"
keywords = ["multibeam", "sonar", "hydrography", "kongsberg", "ALL"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: GIS"
]

# Minimal dependencies inferred from imports; shapefile corresponds to pyshp package
# Users needing raster export will also require rasterio.
# All optional heavy dependencies can be extras.

dependencies = [
  "numpy>=1.20",
  "pyproj>=3.0"
]

[project.urls]
Homepage = "https://github.com/julRusVal/pyall"
Issues = "https://github.com/julRusVal/pyall/issues"

[project.optional-dependencies]
# Extras grouped by functionality
raster = ["rasterio>=1.3"]
shapefile = ["pyshp>=2.3"]
# If future LAS functionality added, could include: las = ["laspy"]

[project.scripts]
pyall-all2points = "pyall.all2points:main"

[tool.setuptools]
package-dir = {"" = "src"}
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
# Could dynamically read version from a single source file later if desired.

[tool.setuptools.package-data]
# Example: include PDF spec if distributing
pyall = ["data/Simrad EM Datagrams Oct 2013.pdf"]

[tool.pyall]
# Custom section for future internal configuration.
file_spec = "data/Simrad EM Datagrams Oct 2013.pdf"
